# pareta

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md  llms-full.txt  llms.txt
docs/examples/: README.md  audio-transcribe-and-speak.py  benchmark-capability-on-your-data.py  capability-deploy-and-infer.py  concurrent-async.md  cost-and-metrics.md  deploy-and-infer.md  document-extraction.md  evaluate-on-your-data.md  extraction.md  find-and-deploy-best-model.md  handle-unsupported-match.py  icd-coding.md  migrate-from-openai.md  retrieval.md  speech-to-text.md  streaming-chat.md  summarization.md  text-classification.md  text-to-speech.md
docs/guide/: README.md  agent-openclaw.md  async.md  cli.md  configuration.md  core-concepts.md  deploying-endpoints.md  discovery.md  errors-and-retries.md  evaluation.md  inference.md  installation.md  mcp.md  quickstart.md  skill.md
docs/reference/: README.md  agent-api.md  audio.md  chat.md  client.md  embeddings.md  endpoints.md  evals.md  exceptions.md  http-api.md  images.md  models.md  rerank.md  tasks.md  types.md
scripts/: build_llms.py
skills/pareta/: README.md  SKILL.md
src/pareta/: __init__.py  _client.py  _exceptions.py  _models.py  _version.py  cli.py  mcp_server.py
src/pareta/resources/: __init__.py  audio.py  auto.py  chat.py  embeddings.py  endpoints.py  evals.py  images.py  models.py  rerank.py  tasks.py
tests/: conftest.py  test_async.py  test_audio.py  test_auto.py  test_chat_and_models.py  test_cli.py  test_client.py  test_embeddings.py  test_endpoints.py  test_errors_and_retries.py  test_images.py  test_llms.py  test_mcp.py  test_rerank.py  test_slice4_discovery.py  test_tasks_and_evals.py
