[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pareta"
version = "1.0.0"
description = "Python client for Pareta — model:\"auto\" inference that routes every request to the best model, evals on your own data, and auto metrics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Pareta" }]
keywords = ["pareta", "llm", "inference", "openai", "evals", "open-weights"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]
# Deliberately tiny: one HTTP client (sync + async) + typing backports.
dependencies = [
    "httpx>=0.27",
    "typing-extensions>=4.10; python_version < '3.12'",
]

[project.urls]
Homepage = "https://pareta.ai"
Documentation = "https://docs.pareta.ai"
Source = "https://github.com/Pareta-AI/pareta"
Issues = "https://github.com/Pareta-AI/pareta/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
# `pip install pareta[cli]` → the `pareta` command (Typer over this SDK).
# `pip install pareta[mcp]` → the `pareta-mcp` Model Context Protocol server
# (stdio) that exposes the SDK's operations as tools to an AI agent.
cli = [
    "typer>=0.12",
    "rich>=13",
]
mcp = [
    "mcp>=1.2",
]

[project.scripts]
pareta = "pareta.cli:app"
pareta-mcp = "pareta.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pareta"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
